<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">SensoroCity</string>
    <string name="city_name">SENSORO CITY</string>
    <string name="historical_log">History</string>
    <string name="year">&#160;year</string>
    <string name="name">name</string>
    <string name="sexs">Gender</string>
    <string name="identification_number">ID</string>
    <string name="party_a_customer_name">party A(client)</string>
    <string name="owners_name">owner\'s name</string>
    <string name="phone_num">Mobile</string>
    <string name="company_name">Corporation name</string>
    <string name="social_credit_code">Uniform Social Credit Code</string>
    <string name="signed">signed</string>
    <string name="not_signed">unsigned</string>
    <string name="all_contracts">all contracts</string>
    <string name="all_states">all</string>
    <string name="community">Community</string>
    <string name="rental_house">Rental property</string>
    <string name="factory">Factory</string>
    <string name="resident_workshop">Workshop</string>
    <string name="warehouse">Warehouse</string>
    <string name="shop_storefront">Store</string>
    <string name="the_mall">Mall</string>
    <string name="the_ohter">Others</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="signal_excellent">Signal Good</string>
    <string name="signal_good">Signal Normal</string>
    <string name="signal_weak">Signal Weak</string>
    <string name="no_signal">No Signal</string>
    <string name="alert_contact">Alarm Contact</string>
    <string name="get_the_middle_profile">Getting the configuration file</string>
    <string name="live_photo">site photos</string>
    <string name="positioned">Located</string>
    <string name="not_positioned">Unlocated</string>
    <string name="patrol_monitoring_point">Inspection Monitoring Point</string>
    <string name="inspection_content">Inspection Content</string>
    <string name="confirm_that_the_monitoring_point_is_normal">Confirm the monitoring point is normal</string>
    <string name="i_will_see_again">Cancel</string>
    <string name="normal">Normal</string>
    <string name="monitoring_point_exception_details">Monitoring Point Abnormal Details</string>
    <string name="inspection_task">Inspection Task</string>
    <string name="abnormal_reporting">abnormality</string>
    <string name="photo_recording">Photo/Video</string>
    <string name="must_select_a_tag_type">Tag type is required</string>
    <string name="upload_at_least_one_photo_or_a_video">Upload at least one photo or video</string>
    <string name="wrong_password">Password is incorrect</string>
    <string name="monitoring_point_details">Monitoring Point Detail</string>
    <string name="alert_log">Alarm Log</string>
    <string name="no_contact_added">Contact is not added</string>
    <string name="location_navigation">Location navigation</string>
    <string name="location_confirm">Location Calibration</string>
    <string name="cant_find_related_content">Can not find related content</string>
    <string name="enter_search_content">Enter search content</string>
    <string name="signal_test">Signal Test</string>
    <string name="signal_test_tip">" Please scan the QRCode"</string>
    <string name="frequency_random">Random</string>
    <string name="setting">Setting</string>
    <string name="determine">OK</string>
    <string name="cancel">Cancel</string>
    <string name="video_compilation">Video compilation</string>
    <string name="video_recording_failed_please_try_again">Video recording failed, please try again</string>
    <string name="video">Video</string>
    <string name="prompt">Tip</string>
    <string name="do_you_want_to_delete_this_video">Delete this video?</string>
    <string name="no_one_confirmed_the_system_automatically_confirms">&#160;hour no confirm，system auto confirms as: test/inspection</string>
    <string name="test_patrol">Test</string>
    <string name="security_risks">Security risk</string>
    <string name="contact">Contact</string>
    <string name="back_to_normal">back to normal</string>
    <string name="confirm_that_the_alert_type_app_is">confirm that the type of alarm by App</string>
    <string name="confirm_that_the_alert_type_web_is">confirm type of alarm by Web</string>
    <string name="below_the_warning_value">&#160;low level</string>
    <string name="achieve_warning_value">at threshold</string>
    <string name="the_system_calls_to">System calls to </string>
    <string name="the_system_sends_msg_to">System sends SMS to </string>
    <string name="equipment_warning">device alarming</string>
    <string name="value_is">value</string>
    <string name="telephone_call">Calling</string>
    <string name="telephone_answer_success">Success</string>
    <string name="telephone_answer_failed">Failed</string>
    <string name="telephone_answer_unknow">Unknown</string>
    <string name="sms_sending">Sending</string>
    <string name="sms_received_successfully">Success</string>
    <string name="sms_received_failed">Failed</string>
    <string name="sms_received_unknow">Unknown</string>
    <string name="personal">Personal</string>
    <string name="legal_representative">Legal representative</string>
    <string name="inspection">Inspection</string>
    <string name="normal_inspection">Inspection normal</string>
    <string name="inspection_abnormality">Inspection abnormal</string>
    <string name="details">Details</string>
    <string name="not_inspected">Uninspected</string>
    <string name="has_inspected">Inspected</string>
    <string name="i_have_inspected">Inspected</string>
    <string name="unknown">Unknown</string>
    <string name="detection_points">Monitoring points</string>
    <string name="warning_monitoring_point">Alarming Monitoring Points</string>
    <string name="normal_monitoring_point">Normal Monitoring Points</string>
    <string name="lost_monitoring_point">Offline Monitoring Points</string>
    <string name="inactive_monitoring_point">Inactive Monitoring Points</string>
    <string name="malfunction_monitoring_point">Malfunction Monitoring Points</string>
    <string name="all_types">All</string>
    <string name="main_page_home">Home</string>
    <string name="main_page_warn">Alarm</string>
    <string name="main_page_malfunction">Malfunction</string>
    <string name="main_page_manage">Manage</string>
    <string name="confirming">Alarm confirm</string>
    <string name="confirming_again">Reconfirm</string>
    <string name="to_be_confirmed">Uncofirmed</string>
    <string name="real_warning">Fire</string>
    <string name="false_positive">False alarm</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="notification_prompt">The notification includes important alarm information, please go to settings to enable it</string>
    <string name="status_lost">Offline</string>
    <string name="status_inactive">Inactivated</string>
    <string name="status_malfunction">Malfunction</string>
    <string name="status_alarm_true">Alarm</string>
    <string name="status_emergency_alarm">Emergency</string>
    <string name="status_timeout_not_reported">Timeout</string>
    <string name="status_offline">Offline</string>
    <string name="text_fire_alarm">A fire broke out at or near the monitoring station, requiring immediate action</string>
    <string name="text_no_fire_alarm">No fire or smoke</string>
    <string name="text_fire_alarm_test">Relevant personnel actively test the warning issued</string>
    <string name="text_fire_alarm_risk">No fire,only potential hazard</string>
    <string name="alarm_type_bnormal_power">Abnormal electricity consumption</string>
    <string name="alarm_type_production_operation">Production operation</string>
    <string name="alarm_type_smoke">Smoking</string>
    <string name="alarm_type_indoor_fire">Indoor fire</string>
    <string name="alarm_type_cooking">Cooking</string>
    <string name="alarm_type_gas_leak">Gas leak</string>
    <string name="alarm_type_artificial_arson">Arson</string>
    <string name="alarm_type_combustible_self_ignition">Self-ignite</string>
    <string name="inspection_exception_tag_equipment_disassembly">disassembly</string>
    <string name="inspection_exception_tag_low_battery">low power</string>
    <string name="inspection_exception_tag_device_exception">abnormality</string>
    <string name="inspection_exception_tag_sensor_anomaly">sSensor abnomal</string>
    <string name="inspection_exception_tag_damaged_indicator">Indicator damaged</string>
    <string name="inspection_exception_tag_screen_damage">Screen damaged</string>
    <string name="inspection_exception_tag_button_damage">Button damaged</string>
    <string name="inspection_exception_tag_appearance_damage">Appearance damaged</string>
    <string name="inspection_exception_tag_device_lost">Device lost</string>
    <string name="inspection_exception_tag_bluetooth_exception">Bluetooth abnormal</string>
    <string name="inspection_exception_tag_loose_equipment">Device loose</string>
    <string name="inspection_status_text_pending_execution">Pending</string>
    <string name="inspection_status_text_executing">Executing</string>
    <string name="inspection_status_text_timeout_not_completed">Timeout ,not executed</string>
    <string name="inspection_status_text_completed">Executed</string>
    <string name="inspection_status_text_timeout_completed">Timeout executed</string>
    <string name="device_alert_removed">Alarm cleared,please view the details in alarm tab</string>
    <string name="version_tip_text">The app is the latest version</string>
    <string name="ok">OK</string>
    <string name="tip_text_login_out">Sign Out?</string>
    <string name="quit">OK</string>
    <string name="business_name">Merchant Name</string>
    <string name="Contact_name_cannot_be_empty">Contact name cannot be empty</string>
    <string name="location_not_obtained">Location failed</string>
    <string name="no_more_data">No more data</string>
    <string name="secondary_verification_failed">verification failed</string>
    <string name="no">None</string>
    <string name="success">Success</string>
    <string name="sensor_detail_tag">Tags</string>
    <string name="ip_complete">Finish</string>
    <string name="alarm_contact_tip_sample">e.g:XX</string>
    <string name="alarm_contact_tip_phone">Mobile</string>
    <string name="alarm_contact_tip_phone_sample">e.g.18600000000</string>
    <string name="deploy_record_device_number">SN</string>
    <string name="deploy_record_name">Name</string>
    <string name="deploy_record_deploy_time">Deploy Time</string>
    <string name="monitor_point_information">Basic Info</string>
    <string name="signal_check_near">Nearby</string>
    <string name="open_ble_to_location">For your function to work properly, turn on Bluetooth and location services</string>
    <string name="rated_current">RC/A</string>
    <string name="deploy_configuration_enter_tip">Please enter the rated current of the installation site air switch,Range:</string>
    <string name="deploy_configuration">Start configuration</string>
    <string name="contract_personal">个人合同</string>
    <string name="contract_business">企业合同</string>
    <string name="contract_creation_success_tip_message">合同创建成功，请生成二维码与业主签订合同</string>
    <string name="contract_preview">合同预览</string>
    <string name="create_qr_code">生成二维码</string>
    <string name="permission_tip">Tips</string>
    <string name="quit_app">Quit App</string>
    <string name="monitor_material">Material</string>
    <string name="count_unit">Count</string>
    <string name="delete_this_group">Delete</string>
    <string name="diameter_mm">Diameter/mm²</string>
    <string name="delete_this">Delete this</string>
</resources>