<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ac_contract_creation_success_tv_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="8dp"
        android:text="@string/ip_complete"
        android:textColor="@color/c_1dbb99"
        android:textSize="14dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/c_dfdfdf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/contract_success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/success"
            android:textColor="@color/c_1dbb99"
            android:textSize="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:text="@string/contract_creation_success_tip_message" />

    </LinearLayout>

    <TextView
        android:id="@+id/ac_contract_creation_success_tv_contract_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_bg_solid_fa_stroke_df_corner_4dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/contract_preview"
        android:textColor="@color/c_252525"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/ac_contract_creation_success_tv_create_qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_btn_29c_ee"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/create_qr_code"
        android:textColor="@color/white"
        android:textSize="16dp" />

</LinearLayout>