<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_solid_ff_corner"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_tip_ble_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/permission_tip"
        android:textColor="@color/c_25292d"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/dialog_tip_ble_tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/open_ble_to_location"
        android:textColor="@color/c_a6a6a6"
        android:textSize="14dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divider_height"
        android:layout_marginTop="24dp"
        android:background="@color/c_dfdfdf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_tip_ble_tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_item_white_ee_corner_left"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/quit_app"
            android:textColor="@color/c_a6a6a6"
            android:textSize="16dp" />

        <View
            android:layout_width="@dimen/view_divider_width"
            android:layout_height="match_parent"
            android:background="@color/c_dfdfdf" />

        <TextView
            android:id="@+id/dialog_tip_ble_tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_item_white_ee_corner_right"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/setting"
            android:textColor="@color/c_29c093"
            android:textSize="16dp" />

    </LinearLayout>
</LinearLayout>