<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_delete_item_picker_calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_this_group"
            android:padding="12dp"
            android:textSize="14dp"
            android:textColor="@color/c_a6a6a6"
            />

        <TextView
            android:id="@+id/tv_title_item_picker_calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="14dp"
            android:layout_centerVertical="true"
            android:textColor="@color/c_252525"
            />

        <TextView
            android:id="@+id/tv_complete_item_picker_calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/determine"
            android:textColor="@color/c_29c093"
            android:textSize="14dp"
            android:padding="12dp"
            />

    </RelativeLayout>

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/view_divider_height"-->
        <!--android:background="@color/c_dfdfdf" />-->

    <LinearLayout
        android:id="@+id/ll_subtitle_item_picker_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_fafafa"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monitor_material"
            android:textSize="12dp"
            android:textColor="@color/c_a6a6a6"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/c_a6a6a6"
            android:text="@string/diameter_mm" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12dp"
            android:textColor="@color/c_a6a6a6"
            android:gravity="center"
            android:text="@string/count_unit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/optionspicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <com.contrarywind.view.WheelView
            android:id="@+id/options1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.contrarywind.view.WheelView
            android:id="@+id/options2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.contrarywind.view.WheelView
            android:id="@+id/options3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>