<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/c_f4f4f4"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/alert_contact"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/item_adapter_et_alarm_contact_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:cursorVisible="true"
            android:gravity="end"
            android:hint="@string/alarm_contact_tip_sample"
            android:imeOptions="actionDone|actionNext"
            android:textCursorDrawable="@drawable/my_cursor"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divider_height"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/c_dfdfdf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/alarm_contact_tip_phone"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/item_adapter_et_alarm_contact_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@null"
            android:cursorVisible="true"
            android:gravity="end"
            android:hint="@string/alarm_contact_tip_phone_sample"
            android:imeOptions="actionDone|actionNext"
            android:textCursorDrawable="@drawable/my_cursor"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/item_adapter_alarm_ll_contact_delete"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/c_e7e7e7"

        android:gravity="center"
        android:visibility="gone">


        <TextView
            android:id="@+id/item_adapter_alarm_cantact_delete_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:drawableLeft="@drawable/tag_delete"
            android:drawablePadding="5dp"
            android:gravity="center"


            android:padding="10dp"
            android:text="@string/delete_this"

            android:textColor="@color/c_252525"
            android:textSize="40px" />
    </LinearLayout>


</LinearLayout>
