<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/c_f4f4f4">

    <include
        android:id="@+id/ac_deploy_configuration_title_root"
        layout="@layout/item_include_text_title" />

    <LinearLayout
        android:id="@+id/ac_deploy_configuration_et_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ac_deploy_configuration_title_root"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:paddingStart="20dp"
        android:paddingTop="16dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rated_current"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/ac_deploy_configuration_tv_near"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signal_check_near"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:background="@drawable/shape_bg_solid_29c_full_corner"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/ac_deploy_configuration_et_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:inputType="number"
            android:layout_marginStart="8dp"
            android:textColor="@color/c_252525"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/ac_deploy_configuration_tv_enter_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ac_deploy_configuration_et_root"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:text="@string/deploy_configuration_enter_tip"
        android:textColor="@color/c_a6a6a6"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/ac_deploy_configuration_tv_configuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_bg_solid_df_corner"
        android:clickable="false"
        android:enabled="false"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/deploy_configuration"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>