<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_item_white_ee"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deploy_record_device_number"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/item_adapter_deploy_record_tv_sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/c_252525"
            android:layout_marginStart="44dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deploy_record_name"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/item_adapter_deploy_record_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/c_252525"
            android:layout_marginStart="58dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_detail_tag"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14sp"
            />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/item_adapter_deploy_record_rc_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deploy_record_deploy_time"
            android:textColor="@color/c_a6a6a6"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/item_adapter_deploy_record_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/c_252525"
            android:layout_marginStart="30dp"
            />
    </LinearLayout>

</LinearLayout>